# messg-api

./: .env.dev  Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
messgapi/: manage.py  requirements.txt
messgapi/main/: api.py  auth.py  models.py  schemas.py  tests.py
messgapi/main/migrations/: 0001_initial.py  0002_auto_20210211_0916.py
messgapi/messgapi/: asgi.py  settings.py  urls.py  wsgi.py
