[tool.poetry]
name = "messg-api"
version = "0.1.0"
description = ""
authors = ["witekosz <witekosz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
django-ninja = "^0.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
